# Driftlands

./: .aeonrc.yml  CLAUDE.md  Cargo.toml  Driftlands_PRD_v2.md  README.md  run-ralph.sh
.planning/: PROJECT.md  aeon-scan-report.json
assets/audio/: README.md
assets/shaders/: lit_chunk.wgsl  lit_sprite.wgsl
ralph/: CLAUDE.md  design_philosophy.md  prd.json  progress.txt
ralph/archive/2026-03-02-phase-2-core-loop/: prd.json
ralph/archive/2026-03-02-phase-3-world-expansion/: progress.txt
ralph/archive/2026-03-02-phase-5-early-access/: progress.txt
src/: animation.rs  assets.rs  audio.rs  automation.rs  building.rs  camera.rs  combat.rs  controls.rs  crafting.rs  daynight.rs  death.rs  debug_perf.rs  dungeon.rs  enchanting.rs  experiment.rs  farming.rs  fishing.rs  gathering.rs  hud.rs  inventory.rs  lighting.rs  lit_materials.rs  lore.rs  main.rs  mainmenu.rs  minimap.rs  npc.rs  particles.rs  pets.rs  player.rs  quests.rs  saveload.rs  saveslots.rs  season.rs  settings.rs  skills.rs  spatial.rs  status_effects.rs  structures.rs  techtree.rs  (+3 more)
src/world/: chunk.rs  generation.rs  mod.rs  tile.rs
