[package]
name = "driftlands"
version = "0.6.0"
edition = "2021"
description = "A 2D survival crafting game with procedural worlds, dynamic weather, and emergent gameplay"
authors = ["James Walton <james@stratasoftwaregroup.com>"]
license = "MIT"

[dependencies]
bevy = "0.15"
noise = "0.9"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

[features]
# Use dynamic_linking only for dev builds: cargo run --features dev
dev = ["bevy/dynamic_linking"]

# Faster dev builds
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Release build — optimized for distribution
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
